--- a/BE0/src/views/sample.ejs
+++ b/BE0/src/views/sample.ejs
@@ -3,8 +3,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     hello a lap ejs
+    <div>
+      <img class="mimomau" src="/images/mimomau.png" />
+    </div>
   </body>
 </html>
