--- a/BE0/src/views/home.ejs
+++ b/BE0/src/views/home.ejs
@@ -5,35 +5,83 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    th,
+    td {
+      padding: 8px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    tr:hover {
+      background-color: #ccc;
+    }
+
+    .table-container {
+      padding: 15px 20px;
+    }
+    .title {
+      font-size: 25px;
+      font-weight: 600;
+      padding-bottom: 10px;
+    }
+  </style>
   <body>
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a class="active" href="/">Home</a>
+      <a href="/create">Create User</a>
     </div>
-    <div class="form-add-new">
-      <form action="/create-user" method="post">
-        <fieldset>
-          <legend>Add new users</legend>
 
-          <div class="input-group">
-            <label>Email: </label>
-            <input type="text" name="email" />
-          </div>
-          <div class="input-group">
-            <label>Name: </label>
-            <input type="text" name="name" />
-          </div>
-          <div class="input-group">
-            <label>City: </label>
-            <input type="text" name="city" />
-          </div>
-          <div>
-            <button>Save</button>
-          </div>
-        </fieldset>
-      </form>
+    <div class="table-container">
+      <div class="title">List-Users</div>
+      <table>
+        <tr>
+          <th>ID</th>
+          <th>Email</th>
+          <th>Name</th>
+          <th>City</th>
+          <th>Actions</th>
+        </tr>
+
+        <!-- <% for (var i = 0; i < listUsers.length; i++) { %>
+          <tr>
+            <td><%= listUsers[i].id %></td>
+
+            <td><%=listUsers[i].email %></td>
+
+            <td><%= listUsers[i].name %></td>
+
+            <td><%= listUsers[i].city %></td>
+
+            <td>
+              <button>Edit</button>
+              <button>Delete</button>
+            </td>
+          </tr>
+          <% } %> -->
+
+        <% listUsers.forEach(function(user) { %>
+        <tr>
+          <td><%= user.id %></td>
+
+          <td><%=user.email %></td>
+
+          <td><%= user.name %></td>
+
+          <td><%= user.city %></td>
+
+          <td>
+            <button>Edit</button>
+            <button>Delete</button>
+          </td>
+        </tr>
+        <% }) %>
+      </table>
     </div>
   </body>
 </html>
