--- a/BE0/src/views/home.ejs
+++ b/BE0/src/views/home.ejs
@@ -81,7 +81,10 @@
 
           <td>
             <a class="edittt" href="/update/<%= user.id %>">Edit</a>
-            <button>Delete</button>
+
+            <form action="/delete-user/<%= user.id %>" method="POST">
+              <button>Delete</button>
+            </form>
           </td>
         </tr>
         <% }) %>
